Fix more layout issues with Media Browser

--- a/exhibitera/apps/media_browser/media_browser.css
+++ b/exhibitera/apps/media_browser/media_browser.css
@@ -247,6 +247,9 @@ body {
 #logoRegion {
     height: 100%;
 }
+#resultsRow {
+    padding-top: 2.5vh;
+}
 #searchInput {
     outline: none;
 }
